# offboard-aut-dtu

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: basic.yaml  drone.yaml  mocap.yaml
include/: attitude_step.h  mavsdk_helper.h  uav_monitor.h
launch/: att.launch  att_joy.launch  att_test.launch  dynamixel.launch  fly.launch  joystick_control.launch  manipulator_startup.launch  sim_fly.launch  start_att_test.launch  startup.launch  waypoint.launch
msg/: ActuatorArray.msg  Health.msg
src/: .mocap_remap.py.swp  .ros_interface.cpp  att_joy_test.cpp  att_test.cpp  att_ui.py  drone_ui.py  joystick_control.py  joystick_ctrl.cpp  kin_cust.rosinstall  main.cpp  mavsdk_helper.cpp  mavsdk_helper.h  mocap_to_quat.cpp  print_test.py  ros_interface.cpp  test.cpp  uav_monitor.cpp  uav_monitor.h
src/control/: drone_ui.py  dynamixel_ctrl.cpp  joystick_ctrl.cpp  waypoint.cpp
src/flight/: att_test.cpp  ros_interface.cpp  uav_monitor.cpp
src/mvr/: POS.py  att.cpp  att_node.cpp  fly.py  mocap_extract.py  mocap_remap.py  offb_node.cpp  ohno.py  position_control.py  ram_pos.py
